--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h1 class="text-center text-blue-500 text-5xl p-12">Goodbye, cruel World</h1>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <main class="max-w-6xl mx-auto">
+      <section class="text-teal-700">
+        <h1 class="text-center text-5xl px-12 py-4">Hello World</h1>
+        <div class="gap-4 p-6 grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6">
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+        </div>
+      </section>
+      <section class="text-red-700">
+        <h2 class="text-center text-3xl p-6">Goodbye, Cruel World</h2>
+        <div class="gap-4 p-6 grid md:grid-cols-3">
+          <p class="p-8 bg-red-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-red-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-red-200 text-center text-xl">Some content</p>
+        </div>
+      </section>
+      <section class="p-16 text-center">
+        <h2 class="text-3xl">Some other stuff</h2>
+        <p class="p-4">
+          al;skd fsadl;kj asd;f sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl fals;kdf lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj
+          al;skd fsadl;kj asd;f sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl fals;kdf lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj
+          al;skd fsadl;kj asd;f sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl fals;kdf lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj
+          al;skd fsadl;kj asd;f sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl fals;kdf lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj
+          al;skd fsadl;kj asd;f sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl fals;kdf lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
