--- a/src/index.html
+++ b/src/index.html
@@ -6,31 +6,31 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
+  <body class="bg-gray-100 dark:bg-gray-800">
     <main class="max-w-6xl mx-auto">
-      <section class="text-teal-700">
+      <section class="text-teal-700 dark:text-teal-300">
         <h1 class="text-center text-5xl px-12 py-4">Hello World</h1>
         <div class="gap-4 p-6 grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6">
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-teal-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-teal-200 dark:bg-teal-800 text-center text-xl">Some content</p>
         </div>
       </section>
-      <section class="text-red-700">
+      <section class="text-red-700 dark:text-red-300">
         <h2 class="text-center text-3xl p-6">Goodbye, Cruel World</h2>
         <div class="gap-4 p-6 grid md:grid-cols-3">
-          <p class="p-8 bg-red-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-red-200 text-center text-xl">Some content</p>
-          <p class="p-8 bg-red-200 text-center text-xl">Some content</p>
+          <p class="p-8 bg-red-200 dark:bg-red-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-red-200 dark:bg-red-800 text-center text-xl">Some content</p>
+          <p class="p-8 bg-red-200 dark:bg-red-800 text-center text-xl">Some content</p>
         </div>
       </section>
       <section class="p-16 text-center">
