made blank branch

--- a/src/index.html
+++ b/src/index.html
@@ -6,54 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="text-center p-12 bg-bg text-ink">
-    <button class="text-action border border-action p-4 rounded" data-toggle>
-      Toggle Mode
-    </button>
-    <main class="max-w-6xl mx-auto">
-      <h1 class="text-5xl px-12 py-4">Hello World</h1>
-      <section class="text-teal-700 dark:text-teal-300">
-        <h2 class="text-3xl px-12 py-4">Hello There</h2>
-        <div
-          class="text-xl gap-4 p-6 grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6"
-        >
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-          <p class="p-8 bg-teal-200 dark:bg-teal-800">Some content</p>
-        </div>
-      </section>
-      <section class="text-red-700 dark:text-red-300">
-        <h2 class="text-3xl p-6">Goodbye, Cruel World</h2>
-        <div class="text-xl gap-4 p-6 grid md:grid-cols-3">
-          <p class="p-8 bg-red-200 dark:bg-red-800">Some content</p>
-          <p class="p-8 bg-red-200 dark:bg-red-800 text-xl">Some content</p>
-          <p class="p-8 bg-red-200 dark:bg-red-800 text-xl">Some content</p>
-        </div>
-      </section>
-      <section class="p-16">
-        <h2 class="text-3xl">Some other stuff</h2>
-        <p class="p-4">
-          al;skd fsadl;kj asd;f sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl
-          fals;kdf lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj al;skd
-          fsadl;kj asd;f sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl fals;kdf
-          lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj al;skd fsadl;kj asd;f
-          sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl fals;kdf
-          lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj al;skd fsadl;kj asd;f
-          sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl fals;kdf
-          lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj al;skd fsadl;kj asd;f
-          sad asd fl;asd asdlf asd;lfals;dflsakdf as;dl fals;kdf
-          lkas;dfasdfl;asdflkasdflk;asdf a;sld jf;lkasdfj
-        </p>
-      </section>
+  <body>
+    <main>
+      <h1 class="">Hello World</h1>
     </main>
 
     <script src="./index.js"></script>
